--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- fallback error / tip -->
     <div id="imageError" class="hidden" role="status"></div>
   </main>
-
+<audio id="bgAudio" src="song.mp3" preload="auto"></audio>
   <script src="script.js"></script>
 </body>
 </html>
